--- a/power-admin-server/Makefile
+++ b/power-admin-server/Makefile
@@ -1,2 +1,2 @@
-gen: #不能叫api  make命令报错 make: 'api' is up to date.
-	 goctl api  go  --api .\api\admin.api --home .\common\template\   --dir .
+gen: #不能叫api  make命令报错 make: 'api' is up to date. 记住所有go文件是 gozero风格的,不是go_zero风格的
+	 goctl api  go  --api .\api\admin.api --home .\common\template\   --dir .  --style gozero
